terraform/azure-landing-zone/code/routeTable.tf
resource "azurerm_route_table" "rt" {
  name                = "rt-aid-${var.subscription}-01"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

resource "azurerm_route" "rfc1918_1" {
  name                   = "rfc1918_1"
  resource_group_name    = azurerm_resource_group.rg.name
  route_table_name       = azurerm_route_table.rt.name
  address_prefix         = "10.0.0.0/8"
  next_hop_type          = "VirtualAppliance"
  next_hop_in_ip_address = "10.8.0.4"
}

resource "azurerm_route" "rfc1918_2" {
  name                   = "rfc1918_2"
  resource_group_name    = azurerm_resource_group.rg.name
  route_table_name       = azurerm_route_table.rt.name
  address_prefix         = "172.16.0.0/12"
  next_hop_type          = "VirtualAppliance"
  next_hop_in_ip_address = "10.8.0.4"
}

resource "azurerm_route" "rfc1918_3" {
  name                   = "rfc1918_3"
  resource_group_name    = azurerm_resource_group.rg.name
  route_table_name       = azurerm_route_table.rt.name
  address_prefix         = "192.168.0.0/16"
  next_hop_type          = "VirtualAppliance"
  next_hop_in_ip_address = "10.8.0.4"
}
